--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/pg": "^8.6.5",
+    "dotenv": "^16.0.0",
     "http-status-code": "^2.1.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
@@ -22,6 +23,7 @@
   "dependencies": {
     "@types/node": "^17.0.23",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "pg": "^8.7.3"
   }
